More re-factoring. Upgraded to Infinispan 5.1, beta in fact. Not operational in a cluster yet, still some transaction issues. Fixed some FindBug warnings.
git-svn-id: http://ikube.googlecode.com/svn/trunk@701 89a0fb20-889e-aefa-90f6-7c296b20d5cf